@@ -262,113 +262,386 @@ public class Diff
 	}
     }
     
+    
     /** compare specific components */
     public void compare(String search)
     {
 	String   type    = search.split(":")[0];
-	String[] names   = search.split(":")[1].split(",");
-	String   oldName = names[0];
-	String   newName = (names.length>1) ? names[1] : oldName;
+
+	if(search.split(":").length > 1) {
+		// many names to compare
+		String[] names   = search.split(":")[1].split(",");
+		String   oldName = names[0];
+		String   newName = (names.length>1) ? names[1] : oldName;
+
+		if (type.equalsIgnoreCase("PSet")) {
+		    PSetParameter psetold = config1.pset(oldName);
+		    PSetParameter psetnew = config2.pset(newName);
+		    Comparison c = comparePSets(psetold,psetnew);
+		    if (!c.isIdentical()) psets.add(c);
+		}
+		else if (type.equalsIgnoreCase("EDSource")||
+			 type.equalsIgnoreCase("eds")) {
+		    EDSourceInstance edsold = config1.edsource(oldName);
+		    EDSourceInstance edsnew = config2.edsource(newName);
+		    Comparison c = compareInstances(edsold,edsnew);
+		    if (!c.isIdentical()) edsources.add(c);
+		}
+		else if (type.equalsIgnoreCase("ESSource")||
+			 type.equalsIgnoreCase("ess")) {
+		    ESSourceInstance essold = config1.essource(oldName);
+		    ESSourceInstance essnew = config2.essource(newName);
+		    Comparison c = compareInstances(essold,essnew);
+		    if (!c.isIdentical()) essources.add(c);
+		}
+		else if (type.equalsIgnoreCase("ESModule")||
+			 type.equalsIgnoreCase("esm")) {
+		    ESModuleInstance esmold = config1.esmodule(oldName);
+		    ESModuleInstance esmnew = config2.esmodule(newName);
+		    Comparison c = compareInstances(esmold,esmnew);
+		    if (!c.isIdentical()) esmodules.add(c);
+		}
+		else if (type.equalsIgnoreCase("Service")||
+			 type.equalsIgnoreCase("svc")) {
+		    ServiceInstance svcold = config1.service(oldName);
+		    ServiceInstance svcnew = config2.service(newName);
+		    Comparison c = compareInstances(svcold,svcnew);
+		    if (!c.isIdentical()) services.add(c);
+		}
+		else if (type.equalsIgnoreCase("Module")||
+			 type.equalsIgnoreCase("m")) {
+		    ModuleInstance mold = config1.module(oldName);
+		    ModuleInstance mnew = config2.module(newName);
+		    Comparison c = compareInstances(mold,mnew);
+		    if (!c.isIdentical()) modules.add(c);
+		}
+		else if (type.equalsIgnoreCase("OutputModule")||
+			 type.equalsIgnoreCase("om")) {
+		    OutputModule omold = config1.output(oldName);
+		    OutputModule omnew = config2.output(newName);
+		    Comparison c = compareOutputModules(omold,omnew);
+		    if (!c.isIdentical()) modules.add(c);
+		}
+		else if (type.equalsIgnoreCase("EventContent")||
+			 type.equalsIgnoreCase("ec")) {
+		    EventContent ecold = config1.content(oldName);
+		    EventContent ecnew = config2.content(newName);
+		    Comparison c = compareEventContents(ecold,ecnew);
+		    if (!c.isIdentical()) contents.add(c);
+		}
+		else if (type.equalsIgnoreCase("Path")||
+			 type.equalsIgnoreCase("p")) {
+		    Path pold = config1.path(oldName);
+		    Path pnew = config2.path(newName);
+		    Comparison c = compareContainers(pold,pnew);
+		    if (!c.isIdentical()) {
+			paths.add(c);
+			Iterator<Comparison> it = c.recursiveComparisonIterator();
+			while (it.hasNext()) {
+			    Comparison cc = it.next();
+			    if (cc instanceof ContainerComparison) sequences.add(cc);
+			    else if (cc instanceof InstanceComparison) modules.add(cc);
+			}
+		    }
+		}
+		else if (type.equalsIgnoreCase("Sequence")||
+			 type.equalsIgnoreCase("s")) {
+		    Sequence sold = config1.sequence(oldName);
+		    Sequence snew = config2.sequence(newName);
+		    Comparison c = compareContainers(sold,snew);
+		    if (!c.isIdentical()) {
+				sequences.add(c);
+				Iterator<Comparison> it = c.recursiveComparisonIterator();
+				while (it.hasNext()) {
+				    Comparison cc = it.next();
+				    if (cc instanceof ContainerComparison) sequences.add(cc);
+				    else if (cc instanceof InstanceComparison)  modules.add(cc);
+				}
+		    }
+		}
+		else if (type.equalsIgnoreCase("Stream")) {
+		    Stream sold = config1.stream(oldName);
+		    Stream snew = config2.stream(newName);
+		    Comparison c = compareStreams(sold,snew);
+		    if (!c.isIdentical()) streams.add(c);
+		}
+		else if (type.equalsIgnoreCase("Dataset")||
+			 type.equalsIgnoreCase("d")) {
+		    PrimaryDataset dold = config1.dataset(oldName);
+		    PrimaryDataset dnew = config2.dataset(newName);
+		    Comparison c = compareDatasets(dold,dnew);
+		    if (!c.isIdentical()) datasets.add(c);
+		}
+		
+	} else {
+		// compare by types
+		
+		if (type.equalsIgnoreCase("PSet")) {
+			comparePSets();
+		}
+		else if (type.equalsIgnoreCase("EDSource")||
+			 type.equalsIgnoreCase("eds")) {
+			compareEDSources();
+		}
+		else if (type.equalsIgnoreCase("ESSource")||
+			 type.equalsIgnoreCase("ess")) {
+			compareESSources();
+		}
+		else if (type.equalsIgnoreCase("ESModule")||
+			 type.equalsIgnoreCase("esm")) {
+			compareESModules();
+		}
+		else if (type.equalsIgnoreCase("Service")||
+			 type.equalsIgnoreCase("svc")) {
+			compareServices();
+		}
+		else if (type.equalsIgnoreCase("Module")||
+			 type.equalsIgnoreCase("m")) {
+			compareModules();
+		}
+		else if (type.equalsIgnoreCase("OutputModule")||
+			 type.equalsIgnoreCase("om")) {
+			compareOutputModules();
+		}
+		else if (type.equalsIgnoreCase("EventContent")||
+			 type.equalsIgnoreCase("ec")) {
+			compareEventContents();
+		}
+		else if (type.equalsIgnoreCase("Path")||
+			 type.equalsIgnoreCase("p")) {
+			comparePaths();
+		}
+		else if (type.equalsIgnoreCase("Sequence")||
+			type.equalsIgnoreCase("s")) {	
+			compareSequences();
+		}
+		else if (type.equalsIgnoreCase("Stream")) {
+			compareStreams();
+		}
+		else if (type.equalsIgnoreCase("Dataset")||
+			 type.equalsIgnoreCase("d")) {
+			compareDatasets();
+		}
+	}
+
 	
-	if (type.equalsIgnoreCase("PSet")) {
-	    PSetParameter psetold = config1.pset(oldName);
-	    PSetParameter psetnew = config2.pset(newName);
-	    Comparison c = comparePSets(psetold,psetnew);
-	    if (!c.isIdentical()) psets.add(c);
-	}
-	else if (type.equalsIgnoreCase("EDSource")||
-		 type.equalsIgnoreCase("eds")) {
-	    EDSourceInstance edsold = config1.edsource(oldName);
-	    EDSourceInstance edsnew = config2.edsource(newName);
-	    Comparison c = compareInstances(edsold,edsnew);
-	    if (!c.isIdentical()) edsources.add(c);
-	}
-	else if (type.equalsIgnoreCase("ESSource")||
-		 type.equalsIgnoreCase("ess")) {
-	    ESSourceInstance essold = config1.essource(oldName);
-	    ESSourceInstance essnew = config2.essource(newName);
-	    Comparison c = compareInstances(essold,essnew);
-	    if (!c.isIdentical()) essources.add(c);
-	}
-	else if (type.equalsIgnoreCase("ESModule")||
-		 type.equalsIgnoreCase("esm")) {
-	    ESModuleInstance esmold = config1.esmodule(oldName);
-	    ESModuleInstance esmnew = config2.esmodule(newName);
-	    Comparison c = compareInstances(esmold,esmnew);
-	    if (!c.isIdentical()) esmodules.add(c);
-	}
-	else if (type.equalsIgnoreCase("Service")||
-		 type.equalsIgnoreCase("svc")) {
-	    ServiceInstance svcold = config1.service(oldName);
-	    ServiceInstance svcnew = config2.service(newName);
-	    Comparison c = compareInstances(svcold,svcnew);
-	    if (!c.isIdentical()) services.add(c);
-	}
-	else if (type.equalsIgnoreCase("Module")||
-		 type.equalsIgnoreCase("m")) {
-	    ModuleInstance mold = config1.module(oldName);
-	    ModuleInstance mnew = config2.module(newName);
-	    Comparison c = compareInstances(mold,mnew);
-	    if (!c.isIdentical()) modules.add(c);
-	}
-	else if (type.equalsIgnoreCase("OutputModule")||
-		 type.equalsIgnoreCase("om")) {
-	    OutputModule omold = config1.output(oldName);
-	    OutputModule omnew = config2.output(newName);
-	    Comparison c = compareOutputModules(omold,omnew);
-	    if (!c.isIdentical()) modules.add(c);
-	}
-	else if (type.equalsIgnoreCase("EventContent")||
-		 type.equalsIgnoreCase("ec")) {
-	    EventContent ecold = config1.content(oldName);
-	    EventContent ecnew = config2.content(newName);
-	    Comparison c = compareEventContents(ecold,ecnew);
-	    if (!c.isIdentical()) contents.add(c);
-	}
-	else if (type.equalsIgnoreCase("Path")||
-		 type.equalsIgnoreCase("p")) {
-	    Path pold = config1.path(oldName);
-	    Path pnew = config2.path(newName);
-	    Comparison c = compareContainers(pold,pnew);
-	    if (!c.isIdentical()) {
-		paths.add(c);
-		Iterator<Comparison> it = c.recursiveComparisonIterator();
-		while (it.hasNext()) {
-		    Comparison cc = it.next();
-		    if (cc instanceof ContainerComparison) sequences.add(cc);
-		    else if (cc instanceof InstanceComparison) modules.add(cc);
-		}
-	    }
-	}
-	else if (type.equalsIgnoreCase("Sequence")||
-		 type.equalsIgnoreCase("s")) {
-	    Sequence sold = config1.sequence(oldName);
-	    Sequence snew = config2.sequence(newName);
-	    Comparison c = compareContainers(sold,snew);
-	    if (!c.isIdentical()) {
-		sequences.add(c);
-		Iterator<Comparison> it = c.recursiveComparisonIterator();
-		while (it.hasNext()) {
-		    Comparison cc = it.next();
-		    if (cc instanceof ContainerComparison) sequences.add(cc);
-		    else if (cc instanceof InstanceComparison)  modules.add(cc);
-		}
-	    }
-	}
-	else if (type.equalsIgnoreCase("Stream")) {
-	    Stream sold = config1.stream(oldName);
-	    Stream snew = config2.stream(newName);
-	    Comparison c = compareStreams(sold,snew);
-	    if (!c.isIdentical()) streams.add(c);
-	}
-	else if (type.equalsIgnoreCase("Dataset")||
-		 type.equalsIgnoreCase("d")) {
-	    PrimaryDataset dold = config1.dataset(oldName);
-	    PrimaryDataset dnew = config2.dataset(newName);
-	    Comparison c = compareDatasets(dold,dnew);
-	    if (!c.isIdentical()) datasets.add(c);
-	}
     }
+    
+    /** compare all paths and store all non-identical comparisons */
+    public void comparePaths() {
+    	Iterator<Path> itPath2 = config2.pathIterator();
+    	while (itPath2.hasNext()) {
+    	    Path path2 = itPath2.next();
+    	    Path path1 = config1.path(path2.name());
+    	    Comparison c = compareContainers(path1,path2);
+    	    if (!c.isIdentical()) paths.add(c);
+    	}
+    	Iterator<Path> itPath1 = config1.pathIterator();
+    	while (itPath1.hasNext()) {
+    	    Path path1 = itPath1.next();
+    	    if (config2.path(path1.name())==null)
+    		paths.add(compareContainers(path1,null));
+    	}
+    }
+    
+    /** compare all parameter sets and store all non-identical comparisons */
+    public void comparePSets() {
+    	// global parameter sets
+    	Iterator<PSetParameter> itPSet2 = config2.psetIterator();
+    	while (itPSet2.hasNext()) {
+    	    PSetParameter pset2 = itPSet2.next();
+    	    PSetParameter pset1 = config1.pset(pset2.name());
+    	    Comparison c = comparePSets(pset1,pset2);
+    	    if (!c.isIdentical()) psets.add(c);
+    	}
+    	Iterator<PSetParameter> itPSet1 = config1.psetIterator();
+    	while (itPSet1.hasNext()) {
+    	    PSetParameter pset1 = itPSet1.next();
+    	    if (config2.pset(pset1.name())==null)
+    		psets.add(comparePSets(pset1,null));
+    	}    	
+    }
+
+    /** compare all EDSources and store all non-identical comparisons */
+    public void compareEDSources() {
+    	// EDSources
+    	Iterator<EDSourceInstance> itEDS2 = config2.edsourceIterator();
+    	while (itEDS2.hasNext()) {
+    	    EDSourceInstance eds2 = itEDS2.next();
+    	    EDSourceInstance eds1 = config1.edsource(eds2.name());
+    	    Comparison c = compareInstances(eds1,eds2);
+    	    if (!c.isIdentical()) edsources.add(c);
+    	}
+    	Iterator<EDSourceInstance> itEDS1 = config1.edsourceIterator();
+    	while (itEDS1.hasNext()) {
+    	    EDSourceInstance eds1 = itEDS1.next();
+    	    if (config2.edsource(eds1.name())==null)
+    		edsources.add(compareInstances(eds1,null));
+    	}    	
+    }
+    
+    /** compare all ESSources and store all non-identical comparisons */
+    public void compareESSources() {
+    	// ESSources
+    	Iterator<ESSourceInstance> itESS2 = config2.essourceIterator();
+    	while (itESS2.hasNext()) {
+    	    ESSourceInstance ess2 = itESS2.next();
+    	    ESSourceInstance ess1 = config1.essource(ess2.name());
+    	    Comparison c = compareInstances(ess1,ess2);
+    	    if (!c.isIdentical()) essources.add(c);
+    	}
+    	Iterator<ESSourceInstance> itESS1 = config1.essourceIterator();
+    	while (itESS1.hasNext()) {
+    	    ESSourceInstance ess1 = itESS1.next();
+    	    if (config2.essource(ess1.name())==null)
+    		essources.add(compareInstances(ess1,null));
+    	}
+    }
+    
+    /** compare all ESModules and store all non-identical comparisons */
+    public void compareESModules() {
+    	// ESModules
+    	Iterator<ESModuleInstance> itESM2 = config2.esmoduleIterator();
+    	while (itESM2.hasNext()) {
+    	    ESModuleInstance esm2 = itESM2.next();
+    	    ESModuleInstance esm1 = config1.esmodule(esm2.name());
+    	    Comparison c = compareInstances(esm1,esm2);
+    	    if (!c.isIdentical()) esmodules.add(c);
+    	}
+    	Iterator<ESModuleInstance> itESM1 = config1.esmoduleIterator();
+    	while (itESM1.hasNext()) {
+    	    ESModuleInstance esm1 = itESM1.next();
+    	    if (config2.esmodule(esm1.name())==null)
+    		esmodules.add(compareInstances(esm1,null));
+    	}
+    }
+    
+    /** compare all Services and store all non-identical comparisons */
+    public void compareServices() {
+    	// Services
+    	Iterator<ServiceInstance> itSvc2 = config2.serviceIterator();
+    	while (itSvc2.hasNext()) {
+    	    ServiceInstance svc2 = itSvc2.next();
+    	    ServiceInstance svc1 = config1.service(svc2.name());
+    	    Comparison c = compareInstances(svc1,svc2);
+    	    if (!c.isIdentical()) services.add(c);
+    	}
+    	Iterator<ServiceInstance> itSvc1 = config1.serviceIterator();
+    	while (itSvc1.hasNext()) {
+    	    ServiceInstance svc1 = itSvc1.next();
+    	    if (config2.service(svc1.name())==null)
+    		services.add(compareInstances(svc1,null));
+    	}    	
+    }
+    
+    /** compare all Modules and store all non-identical comparisons */
+    public void compareModules() {
+    	// Modules
+    	Iterator<ModuleInstance> itMod2 = config2.moduleIterator();
+    	while (itMod2.hasNext()) {
+    	    ModuleInstance mod2 = itMod2.next();
+    	    ModuleInstance mod1 = config1.module(mod2.name());
+    	    Comparison c = compareInstances(mod1,mod2);
+    	    if (!c.isIdentical()) modules.add(c);
+    	}
+    	Iterator<ModuleInstance> itMod1 = config1.moduleIterator();
+    	while (itMod1.hasNext()) {
+    	    ModuleInstance mod1 = itMod1.next();
+    	    if (config2.module(mod1.name())==null)
+    		modules.add(compareInstances(mod1,null));
+    	}    	
+    }
+
+    /** compare all Output Modules and store all non-identical comparisons */
+    public void compareOutputModules() {
+    	// Outputs
+    	Iterator<OutputModule> itOut2 = config2.outputIterator();
+    	while (itOut2.hasNext()) {
+    	    OutputModule out2 = itOut2.next();
+    	    OutputModule out1 = config1.output(out2.name());
+    	    Comparison c = compareOutputModules(out1,out2);
+    	    if (!c.isIdentical()) outputs.add(c);
+    	}
+    	Iterator<OutputModule> itOut1 = config1.outputIterator();
+    	while (itOut1.hasNext()) {
+    	    OutputModule out1 = itOut1.next();
+    	    if (config2.output(out1.name())==null)
+    		outputs.add(compareOutputModules(out1,null));
+    	}
+    }
+    
+    /** compare all Sequences and store all non-identical comparisons */
+    public void compareSequences() {
+    	// Sequences
+    	Iterator<Sequence> itSeq2 = config2.sequenceIterator();
+    	while (itSeq2.hasNext()) {
+    	    Sequence seq2 = itSeq2.next();
+    	    Sequence seq1 = config1.sequence(seq2.name());
+    	    Comparison c = compareContainers(seq1,seq2);
+    	    if (!c.isIdentical()) sequences.add(c);
+    	}
+    	Iterator<Sequence> itSeq1 = config1.sequenceIterator();
+    	while (itSeq1.hasNext()) {
+    	    Sequence seq1 = itSeq1.next();
+    	    if (config2.sequence(seq1.name())==null)
+    		sequences.add(compareContainers(seq1,null));
+    	}    	
+    }
+
+    /** compare all EventContents sets and store all non-identical comparisons */
+    public void compareEventContents() {
+    	// EventContents
+    	Iterator<EventContent> itEventContent2 = config2.contentIterator();
+    	while (itEventContent2.hasNext()) {
+    	    EventContent ec2 = itEventContent2.next();
+    	    EventContent ec1 = config1.content(ec2.name());
+    	    Comparison c = compareEventContents(ec1,ec2);
+    	    if (!c.isIdentical()) contents.add(c);
+    	}
+    	Iterator<EventContent> itEventContent1 = config1.contentIterator();
+    	while (itEventContent1.hasNext()) {
+    	    EventContent ec1 = itEventContent1.next();
+    	    if (config2.content(ec1.name())==null)
+    		contents.add(compareEventContents(ec1,null));
+    	}
+    }
+    
+    /** compare all Streams sets and store all non-identical comparisons */
+    public void compareStreams() {
+    	// Streams
+    	Iterator<Stream> itStream2 = config2.streamIterator();
+    	while (itStream2.hasNext()) {
+    	    Stream s2 = itStream2.next();
+    	    Stream s1 = config1.stream(s2.name());
+    	    Comparison c = compareStreams(s1,s2);
+    	    if (!c.isIdentical()) streams.add(c);
+    	}
+    	Iterator<Stream> itStream1 = config1.streamIterator();
+    	while (itStream1.hasNext()) {
+    	    Stream s1 = itStream1.next();
+    	    if (config2.stream(s1.name())==null)
+    		streams.add(compareStreams(s1,null));
+    	}
+    }
+    
+    /** compare all Datasets sets and store all non-identical comparisons */
+    public void compareDatasets() {
+    	// Datasets
+    	Iterator<PrimaryDataset> itDataset2 = config2.datasetIterator();
+    	while (itDataset2.hasNext()) {
+    	    PrimaryDataset dataset2 = itDataset2.next();
+    	    PrimaryDataset dataset1 = config1.dataset(dataset2.name());
+    	    Comparison c = compareDatasets(dataset1,dataset2);
+    	    if (!c.isIdentical()) datasets.add(c);
+    	}
+    	Iterator<PrimaryDataset> itDataset1 = config1.datasetIterator();
+    	while (itDataset1.hasNext()) {
+    	    PrimaryDataset dataset1 = itDataset1.next();
+    	    if (config2.dataset(dataset1.name())==null)
+    		datasets.add(compareDatasets(dataset1,null));
+    	}
+
+    }    
     
     
     /** check if there are any differences at all */
